test/success/instance_specialization/main.sk
module Main {

class Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

instance Bar[Foo] {
    fn bar(self) -> () {
        assert(True)
    }
}

instance[T] Bar[T] {
    fn bar(self) -> () {
        assert(False)
    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}