test/errors/missing_instance_members/main.sk
module Main {

class Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
    fn baz(self) -> ()
    fn baq(self) -> ()
    fn baf(self) -> () {
        
    }
}

instance Bar[Foo] {
    fn bar(self) -> () {

    }
}

fn main() {
}

}